css/style.css
/* ... */
.switch input:checked+.toggler:before {
    -webkit-transform: translateX(var(--switch-toggler-right));
    -ms-transform: translateX(var(--switch-toggler-right));
    transform: translateX(var(--switch-toggler-right));
}

@media only screen and (min-width: 550px) {
    .switches {
        gap: 7px;
    }

    .switch {
        --switch-width: calc(38px);
        /* 50 */
        --switch-height: calc(40px / 2);
        /* 25 */
    }
}

/*** END: switch checkbox ***/
/*** dark mode switch checkbox ***/
.switch {
    --switch-toggler-offset: calc(var(--switch-toggler-left)*2);
}

.switch:is(.mode_dark) input+.toggler {
    background-color: white;
    border-color: var(--color-bg-darkest);
}

.switch:is(.mode_dark, .mode_stars) input:checked+.toggler {
    background-color: var(--color-btn);
}

.switch:is(.mode_dark) .toggler:before {
    background-color: #ffeccf;
    border: 1.5px solid #ffbb52;
}

.switch:is(.mode_dark, .mode_stars) input:checked~.toggler:before,
.switch:is(.mode_dark, .mode_stars) input:checked~.toggler:before {
    background-color: var(--color-btn);
    border: 1.5px solid white;
}

.switch:is(.mode_dark, .mode_stars) .moon-icon,
.switch:is(.mode_dark, .mode_stars) .sun-icon {
    position: absolute;
    height: var(--switch-toggler-height);
    width: var(--switch-toggler-height);
    background-repeat: no-repeat;
    background-position: center;
    background-image: url(../images/moon.svg);
    background-size: 75%;
}

.switch:is(.mode_dark, .mode_stars) .sun-icon {
    background-image: url(../images/sun.svg);
    background-size: 90%;
}

.switch.mode_stars .moon-icon {
    background-image: url(../images/sparkle_light.svg);
    background-size: 90%;
}


.switch:is(.mode_dark, .mode_stars) .sun-icon {
    opacity: 1;
    transform: translate(calc(var(--switch-toggler-right) + var(--switch-toggler-left)), var(--switch-toggler-left)) rotate(-15deg);
    transform-origin: 50% 50%;
    transition: opacity 150ms, transform 500ms ease;
}

.switch:is(.mode_dark, .mode_stars) input:checked~.toggler .moon-icon {
    opacity: 1;
    transform: translate(var(--switch-toggler-left), calc(var(--switch-toggler-left) * 1.2)) rotate(15deg);
}

.switch.mode_stars input:checked~.toggler .moon-icon {
    transform: translate(var(--switch-toggler-left), calc(var(--switch-toggler-left) * 1.2)) rotate(0);
}


.switch:is(.mode_dark, .mode_stars) input:checked~.toggler .sun-icon {
    opacity: 0;
    transform: translate(var(--switch-toggler-right), var(--switch-toggler-offset)) rotate(10deg);
}

.switch:is(.mode_dark, .mode_stars) .moon-icon {
    opacity: 0;
    transform: translate(calc(var(--switch-toggler-left) + var(--switch-toggler-left)), var(--switch-toggler-offset)) rotate(-10deg);
    transform-origin: 50% 50%;
    transition: opacity 150ms, transform 500ms ease;
}

.switch.mode_stars .moon-icon {
    transform: translate(calc(var(--switch-toggler-left) + var(--switch-toggler-left)), var(--switch-toggler-offset)) rotate(-25deg);
}

/*** END: dark mode switch checkbox ***/
/* End: Toggle switches */


/* Menu bottom info */
.bottom_info {
    display: flex;
    flex-direction: column;
    gap: 10px;
    /* margin-top: auto; */
}

#json_button {
    height: 20px;
    cursor: pointer;
    display: inline-flex;
    text-align: center;
    align-items: center;
    overflow: hidden;
    flex-direction: row;
    padding-right: 8px;
    font-size: 11px;
    line-height: 11px;
    transition: opacity 0.3s ease;
    color: var(--color-txt);
    fill: var(--color-txt);
    stroke: var(--color-txt);
}

.donations {
    border: 2px dashed var(--color-btn);
    /* border: 2px dashed #8338ec50; */
    border-radius: 5px;
    padding: 6px;
    width: calc(100% + 16px);
    margin-top: 10px;
    margin-left: -8px;
    opacity: 0.6;
    transition: opacity 0.3s ease;
}

.donations:hover {
    opacity: 1;
}

.donations .donations-desc {
    font-size: 10px;
    text-align: center;
    margin-bottom: 10px;
    margin-top: 3px;
}

.donations .buttons .button_item {
    opacity: 1;
}

#suggestion {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    text-decoration: unset;
    color: var(--color-txt);
    margin-top: 5px;
}

#suggestion_question {
    font-size: 10px;
    line-height: 10px;
    opacity: 0.5;
    transition: opacity 0.3s ease;
}

#suggestion:hover #suggestion_question {
    opacity: 0.8;
}

#suggestion_question p {
    margin: 0;
}

#suggestion_question svg {
    height: 100%;
    width: 7px;
    margin-left: 2px;
}

#suggestion_question svg * {
    fill: var(--color-txt);
}

#owner {
    font-size: 14px;
    line-height: 14px;
    display: flex;
    align-items: center;
    gap: 7px;
    opacity: 0.6;
    transition: opacity 0.3s ease;
}

#suggestion:hover #owner {
    opacity: 1;
}

#owner svg {
    height: 16px;
    width: 16px;
}

/* End: Menu bottom info */


#content {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    max-width: 100%;
    height: 100dvh;
    width: 100%;
}

@media only screen and (min-width: 550px) {
    #page:not(.mode_collapse) #content {
        width: calc(100% - var(--menu-size));
    }
}

#header {
    display: flex;
    height: 50px;
    min-height: 50px;
    align-items: center;
    font-size: 16px;
    flex: 1;
    width: 100%;
    position: fixed;
    z-index: 3;
    top: 0;
    transition: top 0.3s ease, left 0.3s ease;
    background: var(--color-bg);
    box-shadow: 0 0 10px 0px var(--color-bg-darkest);
}

#page:not(.mode_collapse) #header {
    background: unset;
    top: 0;
    box-shadow: unset;
}

#header.hidden {
    top: -60px;
}
/* ... */

